Handle DDR startup compatibility